--- a/xxl-job-admin-pg/src/main/resources/application.properties
+++ b/xxl-job-admin-pg/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### web
-server.port=8080
+server.port=8087
 server.servlet.context-path=/xxl-job-admin
 
 ### actuator
@@ -21,7 +21,7 @@ spring.freemarker.settings.number_format=0.##########
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 #mybatis.type-aliases-package=com.xxl.job.admin.core.model
 ### xxl-job, datasource
-spring.datasource.url=jdbc:postgresql://dev:13002/xxl-job
+spring.datasource.url=jdbc:postgresql://47.108.51.144:13002/xyidc_home_lyw
 spring.datasource.username=postgres
 spring.datasource.password=xy@123456
 spring.datasource.driver-class-name=org.postgresql.Driver
