--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -21,9 +21,9 @@ spring.freemarker.settings.number_format=0.##########
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 #mybatis.type-aliases-package=com.xxl.job.admin.core.model
 ### xxl-job, datasource
-spring.datasource.url=jdbc:postgresql://47.108.51.144:13002/xyidc_home_lyw
+spring.datasource.url=jdbc:postgresql://47.108.51.144:17002/back_develop
 spring.datasource.username=postgres
-spring.datasource.password=xy@123456
+spring.datasource.password=xy@2020
 spring.datasource.driver-class-name=org.postgresql.Driver
 ### datasource-pool
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
