--- a/xxl-job-springboot-example/src/main/resources/application.properties
+++ b/xxl-job-springboot-example/src/main/resources/application.properties
@@ -8,10 +8,10 @@ logging.config=classpath:logback.xml
 
 
 ### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
-xxl.job.admin.addresses=http://127.0.0.1:8080/xxl-job-admin
+xxl.job.admin.addresses=http://127.0.0.1:8087/xxl-job-admin
 
 ### xxl-job, access token
-xxl.job.accessToken=
+xxl.job.accessToken=default_token
 
 ### xxl-job executor appname
 xxl.job.executor.appname=xxl-job-executor-sample
