修改，任务报表出不来的问题

--- a/xxl-job-admin/pom.xml
+++ b/xxl-job-admin/pom.xml
@@ -82,6 +82,11 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>3.7.0</version>
+        </dependency>
     </dependencies>
 
     <build>
